# ShipShape

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile.agent  README.md  allowed_domains.txt  docker-compose.yml  install.sh  requirements.txt  shipshape.toml  shipshape.toml.example  squid.conf  squid.conf.example
agent-bin/: agy-login  await-request  firstmate-herdr  install-adb  install-flutter  refresh-daily-auth  request-command  request-domain
auth/: README.md
container/: claude-login.sh
control-plane/: README.md  pyproject.toml
control-plane/broker/: Dockerfile.broker  broker.py
control-plane/shipshape/: __init__.py  allowlist.py  app.py  cli.py  commands.py  components.py  config.py  creds.py  docker_ops.py  egress.py  firstmate.py  harvester.py  images.py  migrate.py  otp.py  settings.py  spool.py  state.py  watcher.py
docs/: DESIGN.md  MULTI_INSTANCE.md
egress/: allowed_domains.example.txt  allowed_domains.txt
skills/install-adb/: SKILL.md
skills/install-flutter/: SKILL.md
skills/refresh-daily-auth/: SKILL.md
skills/request-command/: SKILL.md
skills/request-domain/: SKILL.md
